--- a/WebNotify/Views/Shared/_Layout.cshtml
+++ b/WebNotify/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/easyUI")
-    @Scripts.Render("~/bundles/signalR")
+    @*@Scripts.Render("~/bundles/signalR")*@
     <script src="~/Scripts/jquery.signalR-2.2.2.min.js"></script>
-    <script src="~/signalr/hubs"></script> 
+    @*<script src="~/signalr/hubs"></script>*@ 
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
