--- a/WebNotify/Views/Shared/_Layout.cshtml
+++ b/WebNotify/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/easyUI")
     <script src="~/Scripts/jquery.signalR-2.2.2.min.js"></script>
+    <script src="signalr/hubs"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
