--- a/WebNotify/Views/Shared/_Layout.cshtml
+++ b/WebNotify/Views/Shared/_Layout.cshtml
@@ -9,7 +9,9 @@
     @*@Scripts.Render("~/bundles/modernizr")*@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/easyUI")
+    @*@Scripts.Render("~/bundles/easyUI")*@
+    <script src="~/Scripts/easyUI/jquery.easyui.min.js"></script>
+    <script src="~/Scripts/easyUI/locale/easyui-lang-zh_TW.js"></script>
 
     <script src="~/Scripts/jquery.signalR-2.2.2.min.js"></script>
     <script src="~/signalr/hubs"></script>
